Add more info and images into the styleguide

--- a/css/styleguide/examples/grid_1/grid_1_highlighted.html
+++ b/css/styleguide/examples/grid_1/grid_1_highlighted.html
@@ -5,24 +5,32 @@
   <style>
     body {
       font-family: arial;
+      margin: 0;
     }
     .page-wrapper {
       width: 1080px;
       margin: auto;
       padding-top: 50px;
+      background-color: #d4f4ff;
     }
 
     .container{
       display: flex;
+      background-color: lightgreen;
     }
 
     .cell {
       flex: 1;
       padding: 20px;
+      background-color: #dcfacc;
     }
     .content {
       background-color: #e4e6ed;
       height: 200px;
+    }
+
+    div, h2 {
+      border: 1px solid black;
     }
   </style>
 </head>
