Add more grid examples

--- a/css/styleguide/examples/grid/grid_1_1_highlighted.html
+++ b/css/styleguide/examples/grid/grid_1_1_highlighted.html
@@ -11,20 +11,28 @@
       width: 1080px;
       margin: auto;
       padding-top: 50px;
+      border:0;
     }
 
     .container{
       display: flex;
+      background-color: lightgreen;
     }
 
     .cell {
       flex: 25% 0;
       padding: 20px;
-      box-sizing:border-box;
+      background-color: #dcfacc;
+      box-sizing: border-box;
     }
     .content {
       background-color: #e4e6ed;
       height: 200px;
+    }
+
+    div, h2 {
+      color: transparent;
+      border: 1px solid black;
     }
   </style>
 </head>
