--- a/css/styleguide/examples/grid/grid_1_2.html
+++ b/css/styleguide/examples/grid/grid_1_2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Grid 3</title>
+  <title>Grid 1</title>
   <style>
     body {
       font-family: arial;
@@ -15,22 +15,16 @@
 
     .container{
       display: flex;
-      flex-wrap: wrap;
     }
 
     .cell {
-      flex-basis: 25%;
-      flex-grow: 0;
+      flex: 1;
       padding: 20px;
       box-sizing: border-box;
     }
-
-    .cell.large {
-      flex-basis: 50%;
-    }
     .content {
       background-color: #e4e6ed;
-      height: 200px;
+      height: 160px;
     }
   </style>
 </head>
@@ -38,21 +32,6 @@
   <div class="page-wrapper">
     <div class="container">
       <div class="cell">
-        <div class="content"></div>
-        <h2>Some heading</h2>
-        <div>Some example text explaining stuff that need explaining</div>
-      </div>
-      <div class="cell">
-        <div class="content"></div>
-        <h2>Some heading</h2>
-        <div>Some example text explaining stuff that need explaining</div>
-      </div>
-      <div class="cell large">
-        <div class="content"></div>
-        <h2>Some heading</h2>
-        <div>Some example text explaining stuff that need explaining</div>
-      </div>
-      <div class="cell large">
         <div class="content"></div>
         <h2>Some heading</h2>
         <div>Some example text explaining stuff that need explaining</div>
