--- a/css/styleguide/examples/grid/grid_6_1_highlighted.html
+++ b/css/styleguide/examples/grid/grid_6_1_highlighted.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Grid 3</title>
+  <title>Grid 6</title>
   <style>
     body {
       font-family: arial;
@@ -11,26 +11,38 @@
       width: 1080px;
       margin: auto;
       padding-top: 50px;
+      border: 0;
+    }
+
+    .page-wrapper:after, .page-wrapper:before {
+      width: 1200px;
+      margin: 50px -60px;
+      content: "";
+      display: block;
+      border: 1px solid black;
     }
 
     .container{
       display: flex;
-      flex-wrap: wrap;
+      justify-content: space-between;
+      background-color: lightgreen;
     }
 
     .cell {
-      flex-basis: 25%;
+      flex-basis: 30%;
       flex-grow: 0;
       padding: 20px;
       box-sizing: border-box;
+      background-color: #dcfacc;
+      color: transparent;
     }
 
-    .cell.large {
-      flex-basis: 50%;
-    }
     .content {
       background-color: #e4e6ed;
       height: 200px;
+    }
+    div, h2 {
+      border: 1px solid black;
     }
   </style>
 </head>
@@ -40,22 +52,7 @@
       <div class="cell">
         <div class="content"></div>
         <h2>Some heading</h2>
-        <div>Some example text explaining stuff that need explaining</div>
-      </div>
-      <div class="cell">
-        <div class="content"></div>
-        <h2>Some heading</h2>
-        <div>Some example text explaining stuff that need explaining</div>
-      </div>
-      <div class="cell large">
-        <div class="content"></div>
-        <h2>Some heading</h2>
-        <div>Some example text explaining stuff that need explaining</div>
-      </div>
-      <div class="cell large">
-        <div class="content"></div>
-        <h2>Some heading</h2>
-        <div>Some example text explaining stuff that need explaining</div>
+        <div>Some example text explaining<br/> stuff that need explaining</div>
       </div>
       <div class="cell">
         <div class="content"></div>
